fix: corrigir CORS, 25P02 e serialização de datas
SecurityConfig.java:
- Substitui setAllowedOrigins por setAllowedOriginPatterns com wildcard
  para cobrir todos os deploys de preview da Vercel (*.vercel.app)
- Injeta UsuarioService em vez de lambda inline sem transação

UsuarioService.java (novo):
- Implementa UserDetailsService com @Transactional(readOnly = true)
  para garantir contexto transacional no loadUserByUsername

application.properties:
- Adiciona prepareThreshold=0 na URL JDBC para compatibilidade com
  PgBouncer (Supabase) em modo transaction — corrige erro 25P02
- Configura HikariCP com connection-test-query=SELECT 1 para descartar
  conexões com transação abortada antes de reutilizá-las
- Adiciona write-dates-as-timestamps=false para serializar LocalDate
  como string yyyy-MM-dd e não como array [2024,1,15]

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>